@@ -1036,11 +1036,11 @@ operations:
 #define jit_rshr_i(d, r1, r2)
 #define jit_rshr_ui(d, r1, r2)
 #define jit_sqrt_d(rd,rs)
-#define jit_stxi_c(rd, id, rs)
+#define jit_stxi_c(id, rd, rs)
 #define jit_stxi_d(id, rd, rs)
 #define jit_stxi_f(id, rd, rs)
-#define jit_stxi_i(rd, id, rs)
-#define jit_stxi_s(rd, id, rs)
+#define jit_stxi_i(id, rd, rs)
+#define jit_stxi_s(id, rd, rs)
 #define jit_stxr_c(d1, d2, rs)
 #define jit_stxr_d(d1, d2, rs)
 #define jit_stxr_f(d1, d2, rs)
